--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,25 @@ gems:
 defaults:
 -
   scope:
-    path: "manifesto"
+    path: "manifesto/index.md"
     type: "pages"
   values:
-    layout: "policy"
+    layout: "manifesto_index"
+-
+  scope:
+    path: "manifesto/constituencies/index.md"
+    type: "pages"
+  values:
+    layout: "manifesto_local_index"
 -
   scope:
     path: "manifesto/constituencies"
     type: "pages"
   values:
-    layout: "local_policy"
+    layout: "manifesto_local_policy"
+-
+  scope:
+    path: "manifesto"
+    type: "pages"
+  values:
+    layout: "manifesto_policy"
