Shift a little to mention platform separately from the manifesto

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: OpenPolitics
-tagline: An open source plan for the UK. Take control, and create the future you want.
+tagline: A platform and plan for open source democracy; everyone has ideas, it's time we used them.
 
 markdown: kramdown
 
