--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
+---
 language: ruby
 rvm:
 - 2.4.1
 sudo: false
 cache: bundler
+env:
+- TASK='jekyll:check'
+- TASK='jekyll:check_external_links'
+matrix:
+  fast_finish: true
+  allow_failures:
+  - env: TASK='jekyll:check_external_links'
+script: bundle exec rake $TASK
