--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 ---
 language: ruby
-rvm:
-- 2.6.3
 sudo: false
 cache: bundler
+before_install:
+- gem update --system
+- gem install bundler
 env:
 - TASK='jekyll:check'
 - TASK='jekyll:check_external_links'
